lib/src/bindings.dart


  /// Returns a double-precision complex floating-point ndarray data element.
  int ndarray_get_complex128(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    ffi.Pointer<ndarray_complex128_t> out,
  ) {
    return _ndarray_get_complex128(
      arr,
      sub,
      out,
    );
  }

  late final _ndarray_get_complex128Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Pointer<ndarray_complex128_t>)>>('ndarray_get_complex128');
  late final _ndarray_get_complex128 = _ndarray_get_complex128Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
          ffi.Pointer<ndarray_complex128_t>)>();

  /// Returns a single-precision complex floating-point ndarray data element.
  int ndarray_get_complex64(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    ffi.Pointer<ndarray_complex64_t> out,
  ) {
    return _ndarray_get_complex64(
      arr,
      sub,
      out,
    );
  }

  late final _ndarray_get_complex64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Pointer<ndarray_complex64_t>)>>('ndarray_get_complex64');
  late final _ndarray_get_complex64 = _ndarray_get_complex64Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
          ffi.Pointer<ndarray_complex64_t>)>();

  /// Returns a boolean ndarray data element.
  int ndarray_get_bool(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    ffi.Pointer<ffi.Bool> out,
  ) {
    return _ndarray_get_bool(
      arr,
      sub,
      out,
    );
  }

  late final _ndarray_get_boolPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Pointer<ffi.Bool>)>>('ndarray_get_bool');
  late final _ndarray_get_bool = _ndarray_get_boolPtr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
          ffi.Pointer<ffi.Bool>)>();

  /// Returns a pointer to an ndarray data element in the underlying byte array.
  ffi.Pointer<ffi.Uint8> ndarray_get_ptr(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
  ) {
    return _ndarray_get_ptr(
      arr,
      sub,
    );
  }

  late final _ndarray_get_ptrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<ndarray>,
              ffi.Pointer<ffi.Int64>)>>('ndarray_get_ptr');
  late final _ndarray_get_ptr = _ndarray_get_ptrPtr.asFunction<
      ffi.Pointer<ffi.Uint8> Function(
          ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>)>();

  /// Returns an ndarray data element specified by a byte array pointer.
  int ndarray_get_ptr_value(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Uint8> idx,
    ffi.Pointer<ffi.Void> out,
  ) {
    return _ndarray_get_ptr_value(
      arr,
      idx,
      out,
    );
  }

  late final _ndarray_get_ptr_valuePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Void>)>>('ndarray_get_ptr_value');
  late final _ndarray_get_ptr_value = _ndarray_get_ptr_valuePtr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Void>)>();

  /// Returns a double-precision floating-point ndarray data element specified by a
  /// byte array pointer.
  int ndarray_get_ptr_float64(
    ffi.Pointer<ffi.Uint8> idx,
    ffi.Pointer<ffi.Double> out,
  ) {
    return _ndarray_get_ptr_float64(
      idx,
      out,
    );
  }

  late final _ndarray_get_ptr_float64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Double>)>>('ndarray_get_ptr_float64');
  late final _ndarray_get_ptr_float64 = _ndarray_get_ptr_float64Ptr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Double>)>();

  /// Returns a single-precision floating-point ndarray data element specified by a
  /// byte array pointer.
  int ndarray_get_ptr_float32(
    ffi.Pointer<ffi.Uint8> idx,
    ffi.Pointer<ffi.Float> out,
  ) {
    return _ndarray_get_ptr_float32(
      idx,
      out,
    );
  }

  late final _ndarray_get_ptr_float32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Float>)>>('ndarray_get_ptr_float32');
  late final _ndarray_get_ptr_float32 = _ndarray_get_ptr_float32Ptr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Float>)>();

  /// Returns an unsigned 64-bit integer ndarray data element specified by a byte
  /// array pointer.
  int ndarray_get_ptr_uint64(
    ffi.Pointer<ffi.Uint8> idx,
    ffi.Pointer<ffi.Uint64> out,
  ) {
    return _ndarray_get_ptr_uint64(
      idx,
      out,
    );
  }

  late final _ndarray_get_ptr_uint64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint64>)>>('ndarray_get_ptr_uint64');
  late final _ndarray_get_ptr_uint64 = _ndarray_get_ptr_uint64Ptr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Uint64>)>();

  /// Returns a signed 64-bit integer ndarray data element specified by a byte
  /// array pointer.
  int ndarray_get_ptr_int64(
    ffi.Pointer<ffi.Uint8> idx,
    ffi.Pointer<ffi.Int64> out,
  ) {
    return _ndarray_get_ptr_int64(
      idx,
      out,
    );
  }

  late final _ndarray_get_ptr_int64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Int64>)>>('ndarray_get_ptr_int64');
  late final _ndarray_get_ptr_int64 = _ndarray_get_ptr_int64Ptr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Int64>)>();

  /// Returns an unsigned 32-bit integer ndarray data element specified by a byte
  /// array pointer.
  int ndarray_get_ptr_uint32(
    ffi.Pointer<ffi.Uint8> idx,
    ffi.Pointer<ffi.Uint32> out,
  ) {
    return _ndarray_get_ptr_uint32(
      idx,
      out,
    );
  }

  late final _ndarray_get_ptr_uint32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint32>)>>('ndarray_get_ptr_uint32');
  late final _ndarray_get_ptr_uint32 = _ndarray_get_ptr_uint32Ptr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Uint32>)>();

  /// Returns a signed 32-bit integer ndarray data element specified by a byte
  /// array pointer.
  int ndarray_get_ptr_int32(
    ffi.Pointer<ffi.Uint8> idx,
    ffi.Pointer<ffi.Int32> out,
  ) {
    return _ndarray_get_ptr_int32(
      idx,
      out,
    );
  }

  late final _ndarray_get_ptr_int32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Int32>)>>('ndarray_get_ptr_int32');
  late final _ndarray_get_ptr_int32 = _ndarray_get_ptr_int32Ptr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Int32>)>();

  /// Returns an unsigned 16-bit integer ndarray data element specified by a byte
  /// array pointer.
  int ndarray_get_ptr_uint16(
    ffi.Pointer<ffi.Uint8> idx,
    ffi.Pointer<ffi.Uint16> out,
  ) {
    return _ndarray_get_ptr_uint16(
      idx,
      out,
    );
  }

  late final _ndarray_get_ptr_uint16Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint16>)>>('ndarray_get_ptr_uint16');
  late final _ndarray_get_ptr_uint16 = _ndarray_get_ptr_uint16Ptr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Uint16>)>();

  /// Returns a signed 16-bit integer ndarray data element specified by a byte
  /// array pointer.
  int ndarray_get_ptr_int16(
    ffi.Pointer<ffi.Uint8> idx,
    ffi.Pointer<ffi.Int16> out,
  ) {
    return _ndarray_get_ptr_int16(
      idx,
      out,
    );
  }

  late final _ndarray_get_ptr_int16Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Int16>)>>('ndarray_get_ptr_int16');
  late final _ndarray_get_ptr_int16 = _ndarray_get_ptr_int16Ptr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Int16>)>();

  /// Returns an unsigned 8-bit integer ndarray data element specified by a byte
  /// array pointer.
  int ndarray_get_ptr_uint8(
    ffi.Pointer<ffi.Uint8> idx,
    ffi.Pointer<ffi.Uint8> out,
  ) {
    return _ndarray_get_ptr_uint8(
      idx,
      out,
    );
  }

  late final _ndarray_get_ptr_uint8Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint8>)>>('ndarray_get_ptr_uint8');
  late final _ndarray_get_ptr_uint8 = _ndarray_get_ptr_uint8Ptr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Uint8>)>();

  /// Returns a signed 8-bit integer ndarray data element specified by a byte array
  /// pointer.
  int ndarray_get_ptr_int8(
    ffi.Pointer<ffi.Uint8> idx,
    ffi.Pointer<ffi.Int8> out,
  ) {
    return _ndarray_get_ptr_int8(
      idx,
      out,
    );
  }

  late final _ndarray_get_ptr_int8Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Int8>)>>('ndarray_get_ptr_int8');
  late final _ndarray_get_ptr_int8 = _ndarray_get_ptr_int8Ptr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Int8>)>();

  /// Returns a double-precision complex floating-point ndarray data element
  /// specified by a byte array pointer.
  int ndarray_get_ptr_complex128(
    ffi.Pointer<ffi.Uint8> idx,
    ffi.Pointer<ndarray_complex128_t> out,
  ) {
    return _ndarray_get_ptr_complex128(
      idx,
      out,
    );
  }

  late final _ndarray_get_ptr_complex128Ptr = _lookup<
          ffi.NativeFunction<
              ffi.Int8 Function(
                  ffi.Pointer<ffi.Uint8>, ffi.Pointer<ndarray_complex128_t>)>>(
      'ndarray_get_ptr_complex128');
  late final _ndarray_get_ptr_complex128 =
      _ndarray_get_ptr_complex128Ptr.asFunction<
          int Function(
              ffi.Pointer<ffi.Uint8>, ffi.Pointer<ndarray_complex128_t>)>();

  /// Returns a single-precision complex floating-point ndarray data element
  /// specified by a byte array pointer.
  int ndarray_get_ptr_complex64(
    ffi.Pointer<ffi.Uint8> idx,
    ffi.Pointer<ndarray_complex64_t> out,
  ) {
    return _ndarray_get_ptr_complex64(
      idx,
      out,
    );
  }

  late final _ndarray_get_ptr_complex64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ndarray_complex64_t>)>>('ndarray_get_ptr_complex64');
  late final _ndarray_get_ptr_complex64 =
      _ndarray_get_ptr_complex64Ptr.asFunction<
          int Function(
              ffi.Pointer<ffi.Uint8>, ffi.Pointer<ndarray_complex64_t>)>();

  /// Returns a boolean ndarray data element specified by a byte array pointer.
  int ndarray_get_ptr_bool(
    ffi.Pointer<ffi.Uint8> idx,
    ffi.Pointer<ffi.Bool> out,
  ) {
    return _ndarray_get_ptr_bool(
      idx,
      out,
    );
  }

  late final _ndarray_get_ptr_boolPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Bool>)>>('ndarray_get_ptr_bool');
  late final _ndarray_get_ptr_bool = _ndarray_get_ptr_boolPtr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Bool>)>();

  /// Returns an ndarray data element located at a specified linear index.
  int ndarray_iget(
    ffi.Pointer<ndarray> arr,
    int idx,
    ffi.Pointer<ffi.Void> out,
  ) {
    return _ndarray_iget(
      arr,
      idx,
      out,
    );
  }
